--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
 .App {
   text-align: center;
 }
-
+body{
+  position: relative;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.popup-in{
+  animation: app-popup-appear 5s;
+  animation-iteration-count: initial;
+}
+.popup-out{
+  animation: app-popup-disappear 0.5s !important;
+}
+@keyframes app-popup-appear {
+  0% {left: -400px; opacity: 0; height: auto; padding: 0}
+  10% {left: 0; opacity: 1; height: auto; padding: 10px 15px}
+  90% {left: 0; opacity: 1; height: auto; padding: 10px 15px}
+  100% {left: -400px; opacity: 0; height: 0; padding: 0}
+}
+@keyframes app-popup-disappear {
+  0% {left: 0; opacity: 1; height: auto; padding: 10px 15px;}
+  100% {left: -400px; opacity: 0; height: 0; padding: 0; margin: 0}
 }
 
 .App-header {
@@ -26,6 +39,36 @@
 
 .App-link {
   color: #61dafb;
+  background-color: transparent;
+  padding: 10px 15px;
+  transition: 0.2s;
+}
+.popUpWrapper{
+  position: fixed;
+  bottom: 22px;
+  display: flex;
+  flex-direction: column;
+  left: 30px;
+}
+.popUpNotification {
+  margin: 8px 0;
+  background-color: #61dafb;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  transition: all 0.5s ease-in;
+  width: 250px;
+  position: relative;
+  justify-content: space-between;
+  height: auto;
+  overflow: hidden;
+}
+.popUpNotification button{
+  margin-left: 10px;
+  appearance: unset;
+  background-color: unset;
+  border: unset;
+  font-size: 18px;
 }
 
 @keyframes App-logo-spin {
